<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/opov"
            android:textSize="22sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/sound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/sound" />
        <CheckBox
            android:id="@+id/vibration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/vibration" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="20sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ot"
                />
            <EditText
                android:id="@+id/time_start"
                android:inputType="number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doo"
                />
            <EditText
                android:id="@+id/time_end"
                android:inputType="number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/logic"
            android:textSize="22sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:textSize="20sp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ot"
                />
            <EditText
                android:id="@+id/battery_start"
                android:inputType="number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doo"
                />
            <EditText
                android:id="@+id/battery_end"
                android:inputType="number"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/window_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/show_window" />

        <Button
            android:id="@+id/btn"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            />
    </LinearLayout>

</ScrollView>